# bj-helper

./: .gitignore  README.md  config.json  pyproject.toml  run-bj-helper
src/bj_helper/: __init__.py  __main__.py  app.py  cards.py  config.py  control.py  debug.py  integration.py  parser.py  speech.py  state.py  strategy.py
src/bjcalc/: __init__.py  __main__.py  app.py  config.py  hotkey_helper.py  integration.py  parser.py  shortcut.py  speech.py  state.py  strategy.py
tests/: test_config.py  test_hotkey_helper.py  test_main.py  test_parser.py  test_speech.py  test_state.py  test_strategy.py
