[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bj-helper"
version = "0.1.0"
description = "Voice-driven blackjack advisor for Linux desktops"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "PyQt6>=6.7",
  "vosk>=0.3.45",
]

[project.optional-dependencies]
dev = []

[project.scripts]
bj-helper = "bj_helper.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
